--- a/hottest.html
+++ b/hottest.html
@@ -69,7 +69,7 @@
 
       <section class="content-section">
         <div class="section-inner">
-          <article class="content-article article-hottest-cafes width-3-1">
+          <article class="content-article article-hottest-cafes width-2-1">
             <div class="article-inner">
               <div class="article-title">
                 <h3 class="add-icon">CAFE TOP 10</h3>
@@ -102,7 +102,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
+                      <span class="icon-area icon-cafe-daum"></span>
                       <div class="contents-area">
                         <p class="item-name">베개를 위하여</p>
                         <span class="item-post-num">12,117</span>
@@ -118,7 +118,23 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
+                      <span class="icon-area icon-cafe-daum"></span>
+                      <div class="contents-area">
+                        <p class="item-name">맥 쓰는 사람들</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-daum"></span>
+                      <div class="contents-area">
+                        <p class="item-name">맥 쓰는 사람들</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-cafe-daum"></span>
                       <div class="contents-area">
                         <p class="item-name">맥 쓰는 사람들</p>
                         <span class="item-post-num">9,471</span>
@@ -142,23 +158,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
-                      <div class="contents-area">
-                        <p class="item-name">맥 쓰는 사람들</p>
-                        <span class="item-post-num">9,471</span>
-                        <span class="item-engagement">9,471</span>
-                      </div>
-                    </li>
-                    <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
-                      <div class="contents-area">
-                        <p class="item-name">맥 쓰는 사람들</p>
-                        <span class="item-post-num">9,471</span>
-                        <span class="item-engagement">9,471</span>
-                      </div>
-                    </li>
-                    <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
+                      <span class="icon-area icon-cafe-daum"></span>
                       <div class="contents-area">
                         <p class="item-name">맥 쓰는 사람들</p>
                         <span class="item-post-num">9,471</span>
@@ -172,7 +172,7 @@
             </div>
           </article>
 
-          <article class="content-article article-hottest-blogers width-3-1">
+          <article class="content-article article-hottest-blogers width-2-1">
             <div class="article-inner">
               <div class="article-title">
                 <h3 class="add-icon">BLOGER TOP 10</h3>
@@ -183,9 +183,9 @@
                     <li class="hottest-item item-title">
                       <span class="icon-area icon-none"></span>
                       <div class="contents-area">
-                        <p class="item-name">블로거 ID</p>
-                        <span class="item-post-num">게시글 수</span>
-                        <span class="item-engagement">건수</span>
+                        <p class="item-name">Blogger ID</p>
+                        <span class="item-post-num">POSTS</span>
+                        <span class="item-engagement">ENGAGEMENT</span>
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
@@ -197,7 +197,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-blog-naver"></span>
+                      <span class="icon-area icon-blog-tstory"></span>
                       <div class="contents-area">
                         <p class="item-name">opera********</p>
                         <span class="item-post-num">15,221</span>
@@ -213,7 +213,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-blog-naver"></span>
+                      <span class="icon-area icon-blog-tstory"></span>
                       <div class="contents-area">
                         <p class="item-name">power****</p>
                         <span class="item-post-num">10,227</span>
@@ -221,7 +221,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-blog-naver"></span>
+                      <span class="icon-area icon-blog-tstory"></span>
                       <div class="contents-area">
                         <p class="item-name">black*****</p>
                         <span class="item-post-num">9,471</span>
@@ -237,7 +237,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-blog-naver"></span>
+                      <span class="icon-area icon-blog-daum"></span>
                       <div class="contents-area">
                         <p class="item-name">black*****</p>
                         <span class="item-post-num">9,471</span>
@@ -253,7 +253,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-blog-naver"></span>
+                      <span class="icon-area icon-blog-daum"></span>
                       <div class="contents-area">
                         <p class="item-name">black*****</p>
                         <span class="item-post-num">9,471</span>
@@ -275,7 +275,7 @@
             </div>
           </article>
 
-          <article class="content-article article-hottest-influencers width-3-1">
+          <article class="content-article article-hottest-influencers width-2-1">
             <div class="article-inner">
               <div class="article-title">
                 <h3 class="add-icon">SNS TOP 10</h3>
@@ -287,8 +287,8 @@
                       <span class="icon-area icon-none"></span>
                       <div class="contents-area">
                         <p class="item-name">ID</p>
-                        <span class="item-post-num">게시글 수</span>
-                        <span class="item-engagement">건수</span>
+                        <span class="item-post-num">POSTS</span>
+                        <span class="item-engagement">ENGAGEMENT</span>
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
@@ -377,6 +377,110 @@
               </div>
             </div>
           </article>
+
+
+          <article class="content-article article-hottest-youtube width-2-1">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3 class="add-icon"><em class="txt-red">YOUTUBE</em> TOP 10</h3>
+              </div>
+              <div class="article-content">
+                <div class="article-hottest-wrap">
+                  <ul class="hottest-list">
+                    <li class="hottest-item item-title">
+                      <span class="icon-area icon-none"></span>
+                      <div class="contents-area">
+                        <p class="item-name">TITLE</p>
+                        <span class="item-post-num">POSTS</span>
+                        <span class="item-engagement">ENGAGEMENT</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-youtube"></span>
+                      <div class="contents-area">
+                        <p class="item-name">magic*****</p>
+                        <span class="item-post-num">15,471</span>
+                        <span class="item-engagement">15,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-youtube"></span>
+                      <div class="contents-area">
+                        <p class="item-name">opera*******</p>
+                        <span class="item-post-num">15,221</span>
+                        <span class="item-engagement">15,221</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-youtube"></span>
+                      <div class="contents-area">
+                        <p class="item-name">power*****</p>
+                        <span class="item-post-num">12,117</span>
+                        <span class="item-engagement">12,117</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-youtube"></span>
+                      <div class="contents-area">
+                        <p class="item-name">showm***</p>
+                        <span class="item-post-num">10,227</span>
+                        <span class="item-engagement">10,227</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-youtube"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-youtube"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-youtube"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-youtube"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-youtube"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-youtube"></span>
+                      <div class="contents-area">
+                        <p class="item-name">black**</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                  </ul>
+                  <!-- <p class="list-more-btn">더 보기</p> -->
+                </div>
+              </div>
+            </div>
+          </article>
         </div>
       </section>
 
@@ -403,7 +507,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
+                      <span class="icon-area icon-youtube"></span>
                       <div class="contents-area">
                         <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다 Lorem ipsum dolor sit amet consectetur
                           adipisicing elit. Consequuntur sint delectus accusantium quaerat iure. Laboriosam omnis ab hic
@@ -417,7 +521,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
+                      <span class="icon-area icon-youtube"></span>
                       <div class="contents-area">
                         <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
                         <span class="item-date">2022.02.22</span>
@@ -441,7 +545,43 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
+                      <span class="icon-area icon-blog-naver"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-daum"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-blog-tstory"></span>
+                      <div class="contents-area">
+                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
+                        <span class="item-date">2022.02.22</span>
+                        <span class="item-id">야무진진눈깨비</span>
+                        <span class="item-comments">17,115</span>
+                        <span class="item-views">17,115</span>
+                        <span class="item-likes">17,115</span>
+                        <span class="item-shares">17,115</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area icon-youtube"></span>
                       <div class="contents-area">
                         <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
                         <span class="item-date">2022.02.22</span>
@@ -465,7 +605,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
+                      <span class="icon-area icon-insta"></span>
                       <div class="contents-area">
                         <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
                         <span class="item-date">2022.02.22</span>
@@ -477,43 +617,7 @@
                       </div>
                     </li>
                     <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
-                      <div class="contents-area">
-                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
-                        <span class="item-date">2022.02.22</span>
-                        <span class="item-id">야무진진눈깨비</span>
-                        <span class="item-comments">17,115</span>
-                        <span class="item-views">17,115</span>
-                        <span class="item-likes">17,115</span>
-                        <span class="item-shares">17,115</span>
-                      </div>
-                    </li>
-                    <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
-                      <div class="contents-area">
-                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
-                        <span class="item-date">2022.02.22</span>
-                        <span class="item-id">야무진진눈깨비</span>
-                        <span class="item-comments">17,115</span>
-                        <span class="item-views">17,115</span>
-                        <span class="item-likes">17,115</span>
-                        <span class="item-shares">17,115</span>
-                      </div>
-                    </li>
-                    <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
-                      <div class="contents-area">
-                        <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
-                        <span class="item-date">2022.02.22</span>
-                        <span class="item-id">야무진진눈깨비</span>
-                        <span class="item-comments">17,115</span>
-                        <span class="item-views">17,115</span>
-                        <span class="item-likes">17,115</span>
-                        <span class="item-shares">17,115</span>
-                      </div>
-                    </li>
-                    <li class="hottest-item item-subs">
-                      <span class="icon-area icon-cafe-naver"></span>
+                      <span class="icon-area icon-cafe-daum"></span>
                       <div class="contents-area">
                         <p class="item-post-title">마하반야바라밀다 심경관자제보살 행심반야 발아밀다</p>
                         <span class="item-date">2022.02.22</span>
