--- a/now.html
+++ b/now.html
@@ -738,12 +738,12 @@
               </div>
               <div class="article-content">
                 <div class="article-content-top">
-                  <div class="method-select">
+                  <!-- <div class="method-select">
                     <ul class="method-list">
                       <li class="method-item now-on">POST</li>
                       <li class="method-item">PERCENT</li>
                     </ul>
-                  </div>
+                  </div> -->
                   <div class="color-info">
                     <ul class="color-list">
                       <li class="color-item color-item-posit">
