--- a/index.html
+++ b/index.html
@@ -60,73 +60,7 @@
 
       <section class="content-section">
         <div class="section-inner">
-          <article class="content-article article-buzz-news width-3-2 fl-l">
-            <div class="article-inner">
-              <div class="article-title">
-                <h3>버즈메트릭스 뉴스레터</h3>
-                <span class="title-more"><a href="#">더 보기</a></span>
-              </div>
-              <div class="article-content">
-                <div class="article-list-wrap">
-                  <ul class="thumb-list">
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/buzz_2202.png" alt="버즈메트릭스 22년 02월 뉴스"></div>
-                        <p class="thumb-title">2022년 2월호 가상인간</p>
-                      </a>
-                    </li>
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/buzz_2112.png" alt="버즈메트릭스 21년 12월 뉴스"></div>
-                        <p class="thumb-title">2021년 12월호 밀키트</p>
-                      </a>
-                    </li>
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/buzz_2111.png" alt="버즈메트릭스 21년 11월 뉴스"></div>
-                        <p class="thumb-title">2022년 2월호 숏폼</p>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </article>
-
-          <article class="content-article article-youtube-hot width-3-2 fl-l">
-            <div class="article-inner">
-              <div class="article-title">
-                <h3>유튜브 인기 동영상</h3>
-                <span class="title-more"><a href="#">더 보기</a></span>
-              </div>
-              <div class="article-content">
-                <div class="article-list-wrap">
-                  <ul class="thumb-list">
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/youtube_001.jpg" alt="버즈메트릭스 22년 02월 뉴스"></div>
-                        <p class="thumb-title">[애쉬스 게임 리뷰] 짱구는 못말려! 나와 박사님의 여름방학 ~끝나지 않는 7일간의 여행~ 전격 리뷰!!!</p>
-                      </a>
-                    </li>
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/youtube_002.jpg" alt="버즈메트릭스 21년 12월 뉴스"></div>
-                        <p class="thumb-title">내가 더이상 통신사에서 폰을 안사는 이유. 훨씬 저렴한 자급제+알뜰폰 조합 장단점?</p>
-                      </a>
-                    </li>
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/youtube_003.jpg" alt="버즈메트릭스 21년 11월 뉴스"></div>
-                        <p class="thumb-title">『별의 커비 디스커버리』 소개 영상</p>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </article>
-
-          <article class="content-article article-keyword-now intro-keyword-now width-3-1 po-r">
+          <article class="content-article article-keyword-now intro-keyword-now width-3-1 fl-r">
             <div class="article-inner">
               <div class="article-title">
                 <h3><b class="txt-gr">뜨고 있는 뉴스</b> 키워드</h3>
@@ -193,6 +127,72 @@
                       <a href="#" class="link-area" target="_blank">
                         <p class="item-standing">10위</p>
                         <span class="item-title">NFT</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </article>
+
+          <article class="content-article article-buzz-news width-3-2 fl-l">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3>버즈메트릭스 뉴스레터</h3>
+                <span class="title-more"><a href="#">더 보기</a></span>
+              </div>
+              <div class="article-content">
+                <div class="article-list-wrap">
+                  <ul class="thumb-list">
+                    <li class="thumb-item">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/buzz_2202.png" alt="버즈메트릭스 22년 02월 뉴스"></div>
+                        <p class="thumb-title">2022년 2월호 가상인간</p>
+                      </a>
+                    </li>
+                    <li class="thumb-item">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/buzz_2112.png" alt="버즈메트릭스 21년 12월 뉴스"></div>
+                        <p class="thumb-title">2021년 12월호 밀키트</p>
+                      </a>
+                    </li>
+                    <li class="thumb-item">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/buzz_2111.png" alt="버즈메트릭스 21년 11월 뉴스"></div>
+                        <p class="thumb-title">2022년 2월호 숏폼</p>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </article>
+
+          <article class="content-article article-youtube-hot width-3-2 fl-l">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3>유튜브 인기 동영상</h3>
+                <span class="title-more"><a href="#">더 보기</a></span>
+              </div>
+              <div class="article-content">
+                <div class="article-list-wrap">
+                  <ul class="thumb-list">
+                    <li class="thumb-item">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_001.jpg" alt="버즈메트릭스 22년 02월 뉴스"></div>
+                        <p class="thumb-title">[애쉬스 게임 리뷰] 짱구는 못말려! 나와 박사님의 여름방학 ~끝나지 않는 7일간의 여행~ 전격 리뷰!!!</p>
+                      </a>
+                    </li>
+                    <li class="thumb-item">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_002.jpg" alt="버즈메트릭스 21년 12월 뉴스"></div>
+                        <p class="thumb-title">내가 더이상 통신사에서 폰을 안사는 이유. 훨씬 저렴한 자급제+알뜰폰 조합 장단점?</p>
+                      </a>
+                    </li>
+                    <li class="thumb-item">
+                      <a href="#" class="link-area" target="_blank">
+                        <div class="thumb-img"><img src="./src/img/main/youtube_003.jpg" alt="버즈메트릭스 21년 11월 뉴스"></div>
+                        <p class="thumb-title">『별의 커비 디스커버리』 소개 영상</p>
                       </a>
                     </li>
                   </ul>
