--- a/trend.html
+++ b/trend.html
@@ -58,8 +58,8 @@
             <div class="article-inner">
               <div class="article-content">
                 <p class="tab-title">
-                  검색하신 키워드 <strong class="txt-highlight">"베개"</strong>와 관련된 포스트 <strong
-                    class="txt-num txt-highlight">30,000</strong> 건을 발견하였습니다.
+                  검색하신 키워드 <strong class="txt-highlight">"베개"</strong>와 관련된 포스트가 가장 많은 날은 <strong
+                    class="txt-num txt-highlight">4월 1일</strong> 입니다.
                 </p>
               </div>
             </div>
