--- a/userPreset.html
+++ b/userPreset.html
@@ -27,14 +27,22 @@
 
       <section class="content-section">
         <div class="section-inner">
-          <article class="content-article article-engagement">
+          <article class="content-article article-user-setting">
             <div class="article-inner">
               <div class="article-title">
                 <h3 class="">야무진진눈깨비</h3>
               </div>
               <div class="article-content">
+                <div class="user-page-title">
+                  <!-- 유저 페이지 모두 같은 셑 -->
+                  <ul class="user-title-list">
+                    <li class="user-title">검색 설정 관리</li>
+                  </ul>
+                </div>
 
+                <div class="user-preset-wrap">
 
+                </div>
               </div>
             </div>
           </article>
