--- a/userPreset.html
+++ b/userPreset.html
@@ -18,19 +18,20 @@
 </head>
 
 <body>
-  <div id="wrap">
-    <div id="header" class="contents-page userPreset-page">
+  <div id="wrap" class="user-page usePreset-page">
+    <div id="header" class="contents-page">
 
     </div>
 
-    <div id="main" class="contents-page userPreset-page">
+    <div id="main" class="contents-page">
 
       <section class="content-section">
         <div class="section-inner">
           <article class="content-article article-user-setting">
             <div class="article-inner">
               <div class="article-title">
-                <h3 class="">야무진진눈깨비</h3>
+                <span class="user-page-profile"></span>
+                <h3 class="user-page-name">야무진진눈깨비</h3>
               </div>
               <div class="article-content">
                 <div class="user-page-title">
@@ -51,7 +52,7 @@
 
     </div>
 
-    <div id="footer" class="contents-page userPreset-page">
+    <div id="footer" class="contents-page">
 
     </div>
   </div>
