--- a/now.html
+++ b/now.html
@@ -74,18 +74,22 @@
               </div>
               <div class="article-content">
                 <div class="article-chart-wrap main-chart-wrap">
-                  <div class="chart-sample chart-area chart-pie">
-                    <div class="chart-dummy engagement">
-
+                  <div class="chart-sample chart-area">
+                    <div class="chart-pie">
+                      <div class="value-engagement">
+                        <div class="item-color cht-grey"></div>
+                        <h4 class="item-title">ENGAGEMENT</h4>
+                        <p class="item-num">150,329</p>
+                      </div>
                     </div>
                   </div>
                   <div class="chart-info-area">
                     <ul class="chart-info-list">
-                      <li class="info-item info-engagement">
+                      <!-- <li class="info-item info-engagement">
                         <div class="item-color cht-grey"></div>
                         <h4 class="item-title">ENGAGEMENT</h4>
                         <p class="item-num">150,329</p>
-                      </li>
+                      </li> -->
                       <li class="info-item info-views">
                         <div class="item-color cht-gr"></div>
                         <h4 class="item-title">VIEWS</h4>
